# l0-deployment

./: .gitignore  .gitlab-ci.yml  1local-customSpec.json  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  customSpecRaw.json  file_header.txt  local-customSpec.json
.github/: pr-custom-review.yml
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: burnin-label-notification.yml  release-10_candidate.yml  release-20_extrinsic-ordering-check-from-bin.yml  release-21_extrinsic-ordering-check-from-two.yml  release-30_publish-draft-release.yml  release-50_publish-docker-release.yml  release-51_publish-docker-manual.yml  release-99_bot.yml
.rpm/: polkadot.spec
cli/: Cargo.toml
cli/src/: cli.rs  command.rs  error.rs  host_perf_check.rs
core-primitives/: Cargo.toml
doc/: docker.md  release-checklist.md  testing.md
erasure-coding/: Cargo.toml
erasure-coding/src/: lib.rs
evm-client/cli/: Cargo.toml
evm-client/cli/src/frontier_db_cmd/: tests.rs
evm-client/consensus/: Cargo.toml
evm-client/db/: Cargo.toml
evm-client/mapping-sync/: Cargo.toml
evm-client/rpc/: Cargo.toml
evm-frame/base-fee/: Cargo.toml
evm-frame/dynamic-fee/: Cargo.toml
evm-frame/ethereum/: Cargo.toml
evm-frame/evm/: Cargo.toml
evm-frame/evm-chain-id/: Cargo.toml
evm-frame/hotfix-sufficients/: Cargo.toml
evm-primitives/consensus/: Cargo.toml
evm-primitives/dynamic-fee/: Cargo.toml
evm-primitives/ethereum/: Cargo.toml
evm-primitives/evm/: Cargo.toml
evm-primitives/rpc/: Cargo.toml
evm-primitives/self-contained/: Cargo.toml
grafana/: README.md
grafana/parachains/: status.json
node/client/: Cargo.toml
node/client/src/: benchmarking.rs  lib.rs
node/core/backing/: Cargo.toml
node/core/backing/src/: error.rs  lib.rs  metrics.rs  tests.rs
node/core/chain-api/: Cargo.toml
node/core/chain-api/src/: lib.rs  metrics.rs  tests.rs
node/core/chain-selection/: Cargo.toml
node/core/chain-selection/src/: backend.rs  lib.rs  tests.rs  tree.rs
node/core/chain-selection/src/db_backend/: v1.rs
node/core/dispute-coordinator/: Cargo.toml
node/core/dispute-coordinator/src/: backend.rs  error.rs  import.rs  initialized.rs  lib.rs  metrics.rs  spam_slots.rs  status.rs  tests.rs
node/core/dispute-coordinator/src/db/: v1.rs
node/core/dispute-coordinator/src/participation/: mod.rs  tests.rs
node/core/dispute-coordinator/src/participation/queues/: mod.rs  tests.rs
node/core/dispute-coordinator/src/scraping/: mod.rs  tests.rs
node/core/pvf-checker/: Cargo.toml
node/core/pvf-checker/src/: interest_view.rs  lib.rs  metrics.rs  runtime_api.rs  tests.rs
node/core/runtime-api/: Cargo.toml
node/core/runtime-api/src/: cache.rs  lib.rs  metrics.rs  tests.rs
node/network/availability-distribution/: Cargo.toml
node/network/availability-distribution/src/: error.rs  lib.rs  metrics.rs  responder.rs
node/network/availability-distribution/src/pov_requester/: mod.rs
node/network/availability-distribution/src/requester/: mod.rs  session_cache.rs  tests.rs
node/network/availability-distribution/src/requester/fetch_task/: mod.rs  tests.rs
node/network/availability-distribution/src/tests/: mock.rs  mod.rs  state.rs
node/network/availability-recovery/: Cargo.toml
node/network/availability-recovery/src/: error.rs  futures_undead.rs  lib.rs  metrics.rs  tests.rs
node/network/dispute-distribution/: Cargo.toml
node/network/dispute-distribution/src/: error.rs  lib.rs  metrics.rs
node/network/dispute-distribution/src/receiver/: error.rs  mod.rs  peer_queues.rs
node/network/dispute-distribution/src/receiver/batches/: batch.rs  mod.rs
node/network/dispute-distribution/src/sender/: error.rs  mod.rs  send_task.rs
node/network/dispute-distribution/src/tests/: mock.rs  mod.rs
node/network/statement-distribution/: Cargo.toml
node/network/statement-distribution/src/: error.rs  lib.rs  metrics.rs  requester.rs  responder.rs  tests.rs
node/overseer/: Cargo.toml
node/overseer/examples/: minimal-example.rs
node/overseer/src/: dummy.rs  lib.rs  metrics.rs  tests.rs
node/service/: Cargo.toml
node/service/src/: chain_spec.rs  grandpa_support.rs  lib.rs  overseer.rs  relay_chain_selection.rs  tests.rs
node/service/src/parachains_db/: mod.rs  upgrade.rs
node/subsystem-types/: Cargo.toml
node/subsystem-types/src/: lib.rs  messages.rs  runtime_client.rs
node/subsystem-types/src/messages/: network_bridge_event.rs
node/test/client/: Cargo.toml
node/test/client/src/: block_builder.rs  lib.rs
parachain/: Cargo.toml
primitives/: Cargo.toml
primitives/test-helpers/: Cargo.toml
primitives/test-helpers/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/common/: Cargo.toml
runtime/common/slot_range_helper/: Cargo.toml
runtime/common/src/: assigned_slots.rs  auctions.rs  claims.rs  lib.rs  purchase.rs
runtime/metrics/: Cargo.toml
runtime/parachains/: Cargo.toml
runtime/parachains/src/: metrics.rs
runtime/parachains/src/configuration/: migration.rs
runtime/parachains/src/paras_inherent/: benchmarking.rs
runtime/polkadot/: Cargo.toml
runtime/polkadot/constants/: Cargo.toml
runtime/polkadot/constants/src/: lib.rs
runtime/polkadot/src/: lib.rs
scripts/: adder-collator.sh  run_all_benches.sh
src/: main.rs
statement-table/: Cargo.toml
tests/: benchmark_block.rs  benchmark_extrinsic.rs  benchmark_overhead.rs  common.rs
utils/generate-bags/: Cargo.toml
utils/generate-bags/src/: main.rs
utils/staking-miner/: Cargo.toml
utils/staking-miner/src/: dry_run.rs  emergency_solution.rs  main.rs  monitor.rs
xcm/: Cargo.toml
xcm/pallet-xcm-benchmarks/: Cargo.toml
xcm/xcm-builder/: Cargo.toml
xcm/xcm-builder/src/: barriers.rs  origin_conversion.rs
xcm/xcm-builder/tests/: scenarios.rs
xcm/xcm-builder/tests/mock/: mod.rs
xcm/xcm-simulator/: Cargo.toml
xcm/xcm-simulator/example/: Cargo.toml
xcm/xcm-simulator/example/src/: lib.rs  parachain.rs  relay_chain.rs
xcm/xcm-simulator/fuzzer/: Cargo.toml
xcm/xcm-simulator/fuzzer/src/: fuzz.rs  parachain.rs  relay_chain.rs
xcm/xcm-simulator/src/: lib.rs
(+251 files in other folders)
