[package]
name = "peer-erasure-coding"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
peer-primitives = { path = "../primitives" }
peer-node-primitives = { package = "peer-node-primitives", path = "../node/primitives" }
novelpoly = { package = "reed-solomon-novelpoly", version = "1.0.0" }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["std", "derive"] }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-trie = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
thiserror = "1.0.31"
