[package]
name = "polkadot-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
futures = { version = "0.3.21", features = [ "compat" ] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-blockchain = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-keystore = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-runtime = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-consensus = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-consensus-babe = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-chain-spec = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-consensus-babe = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-consensus-babe-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-consensus-epochs = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-finality-grandpa = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-finality-grandpa-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-sync-state-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-transaction-pool = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-network = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-service= { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
mmr-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-transaction-payment-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-block-builder = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
beefy-gadget = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
beefy-gadget-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
substrate-state-trie-migration-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }


Peer-Runtime = { version = "3.0.0-dev", path = "../runtime/polkadot" }





# Frontier
fc-cli = { path = "../evm-client/cli" }
fc-consensus = { path = "../evm-client/consensus" }
fc-db = { path = "../evm-client/db" }
fc-mapping-sync = { path = "../evm-client/mapping-sync" }
fc-rpc = { path = "../evm-client/rpc" }
fc-rpc-core = { path = "../evm-client/rpc-core" }
fp-consensus = { path = "../evm-primitives/consensus" }
fp-dynamic-fee = { path = "../evm-primitives/dynamic-fee" }
fp-evm = { path = "../evm-primitives/evm" }
fp-rpc = { path = "../evm-primitives/rpc" }
fp-storage = { path = "../evm-primitives/storage" }

