[package]
name = "peer-statement-table"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
primitives = { package = "peer-primitives", path = "../primitives" }
