[package]
name = "polkadot-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
frame-benchmarking = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
frame-benchmarking-cli = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-transaction-payment = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
frame-system = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
frame-system-rpc-runtime-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

sp-consensus = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-storage = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-runtime = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-blockchain = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-keyring = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-inherents = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-timestamp = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-session = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-authority-discovery = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-finality-grandpa = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-consensus-babe = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-transaction-pool = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-block-builder = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-mmr-primitives = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }

sc-consensus = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-executor = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-client-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-service = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }

beefy-primitives = { git = "https://github.com/karanvir12/substrate36.git", package="sp-beefy",branch = "relpeer" }

fp-rpc = { path = "../../evm-primitives/rpc" }

# Polkadot Runtimes
Peer-Runtime = { path = "../../runtime/polkadot", optional = true }


polkadot-core-primitives = { path = "../../core-primitives" }
polkadot-primitives = { path = "../../primitives" }

polkadot-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
Peer-Runtime-common = { path = "../../runtime/common" }

[features]
default = ["polkadot"]
polkadot = ["Peer-Runtime"]
runtime-metrics = [
    "Peer-Runtime/runtime-metrics",
]
